<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="edu.mnstate.wy5094ho.tekieproject.checkout">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="@dimen/wid3"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/label1"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addressTV"
        android:layout_width="@dimen/wid4"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/label2"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="@dimen/wid5"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/label3"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/creditTV"
        android:layout_width="@dimen/wid6"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/label4"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="@dimen/sizer1" />

    <EditText
        android:id="@+id/addressEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text"
        android:textSize="@dimen/sizer1" />

    <EditText
        android:id="@+id/creditEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="10"
        android:inputType="number"
        android:textSize="@dimen/sizer1" />

    <EditText
        android:id="@+id/phoneEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:inputType="phone"
        android:textSize="@dimen/sizer1" />

    <CheckBox
        android:id="@+id/emailCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_weight="1"
        android:text="@string/email"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/subsrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_weight="1"
        android:text="@string/subscr"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deliverTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/delv"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/delvTog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/tog"
        android:textOn="@string/tog2"
        android:textSize="@dimen/sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/total"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/tip"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/lblseekBar"
        android:layout_width="@dimen/wid7"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="1" />

    <TextView
        android:id="@+id/seekans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="1">

        <RadioButton
            android:id="@+id/no1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uten2"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/yes1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rad1"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/wid8"
        android:layout_height="@dimen/wid9"
        android:layout_column="1"
        android:layout_row="11"
        android:layout_weight="1"
        android:onClick="butt2"
        android:text="@string/final2"
        android:textSize="@dimen/sp" />

    <TextView
        android:id="@+id/proxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="@dimen/sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/proxy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/utencilTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:text="@string/utencil"
        android:textSize="@dimen/sizer1"
        android:textStyle="bold" />


</android.widget.GridLayout>
