<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pasta"
    android:orientation="vertical"
    tools:context="edu.mnstate.wy5094ho.tekieproject.pasta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past1"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/waff"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past2"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/toast"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist1"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past3"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/oat"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist2"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past4"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/pan"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist3"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/past5"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/scram"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist4"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/wid2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.07"
        android:onClick="butt"
        android:text="@string/chec"
        android:textAlignment="center"
        android:textSize="@dimen/sp" />


</LinearLayout>
