<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/salad"
    android:orientation="vertical"
    tools:context="edu.mnstate.wy5094ho.tekieproject.salad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/sald1"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/waff"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="@dimen/wid1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/sald2"
            android:textSize="@dimen/sizerr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_weight="1"
            android:background="@color/wightbak"
            android:text="@string/toast"
            android:textSize="@dimen/sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addTolist1"
            android:text="@string/adder"
            android:textSize="@dimen/sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/wid2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.02"
        android:onClick="butt"
        android:text="@string/chec"
        android:textAlignment="center"
        android:textSize="@dimen/sp" />

</LinearLayout>
